--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
 	<br>
     <div class="video-wrapper">
         <video autoplay loop playsinline controls poster="https://cdn.aceimg.com/4819869b4.jpg">
-            <source src="https://cdn.aceimg.com/90c07cca6.mp4.mp4" type="video/mp4">
+            <source src="https://cdn.aceimg.com/90c07cca6.mp4" type="video/mp4">
         </video><center>
 		<div style="text-align: center; margin: 30px 0;">
   <a href="https://cine-vids-player.blogspot.com/" style="display: inline-flex; align-items: center; gap: 10px; background-color: #000000; color: white; font-size: 20px; font-weight: bold; padding: 16px 28px; border-radius: 8px; text-decoration: none; box-shadow: 0 0 15px rgba(255 255 255 / 80%); animation: blink 1.5s infinite;">▶︎ Full HD Video
